# ClaudeUsageTracker

./: .gitattributes  .gitignore  CHANGELOG.md  ClaudeUsageMonitor.spec  ClaudeUsageTracker.spec  README.md  REQUIREMENTS.md  SECURITY.md  build_exe.bat  build_exe_clean.bat  pyproject.toml  run.py  start.bat
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci-csharp.yml  ci.yml  release-integrity.yml  release.yml
csharp/: ClaudeUsageTracker.slnx  README.md  build-release.ps1
csharp/ClaudeUsageTracker/: AppOrchestrator.cs  AppPaths.cs  Autostart.cs  ClaudeClient.cs  ClaudeUsageTracker.csproj  Config.cs  EfficiencyMode.cs  FirefoxCookies.cs  I18n.cs  Log.cs  Models.cs  NotificationManager.cs  Poller.cs  Program.cs  SettingsWindow.cs  SystemTriggers.cs  TrayIcon.cs  UpdateCheck.cs  UpdateInstaller.cs  UpdateKeys.cs  UpdateKeys.json  UpdateManifest.cs  UpdateVerifier.cs  WidgetGeometry.cs  WidgetWindow.cs  WorkingSetTrimmer.cs  app.manifest
csharp/ClaudeUsageTracker.Tests/: AssemblyInfo.cs  ClaudeClientTests.cs  ClaudeUsageTracker.Tests.csproj  ConfigTests.cs  FirefoxCookiesTests.cs  I18nTests.cs  LogTests.cs  ModelsTests.cs  NotificationManagerTests.cs  SettingsParsingTests.cs  SystemIntegrationTests.cs  TrayAndWidgetLogicTests.cs  UpdateCheckTests.cs  UpdateVerifierTests.cs  WidgetGeometryTests.cs
csharp/ClaudeUsageTracker/Locales/: de.json  en.json  (+7 more)
csharp/UpdateTool/: Program.cs  UpdateTool.csproj
csharp/installer/: ClaudeUsageTracker.iss
python/: README.md  build_exe.bat  build_exe_clean.bat  pyproject.toml
python/tests/: test_client.py  test_config.py  test_i18n.py  test_models.py  test_update_check.py  test_validate_dependencies.py
scripts/: bump_version.ps1  check_changelog.ps1  export_locales.py  generate_update_key.ps1  publish_release.ps1  release.ps1  validate_dependencies.py
src/claude_usage_monitor/: __init__.py  __main__.py  app.py  autostart.py  client.py  config.py  firefox_cookies.py  i18n.py  models.py  notifications.py  poller.py  tray.py  update_check.py  widget.py
tests/: test_config.py  test_firefox_cookies.py  test_models.py  test_notifications.py  test_tray.py  test_update_check.py  test_update_dialog.py  test_validate_dependencies.py  test_widget_banner_wrap.py  test_widget_geometry.py
(+29 files in other folders)
