[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-usage-monitor"
version = "0.1.0"
description = "System-tray tool that monitors claude.ai usage limits via Firefox cookies"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pystray>=0.19",
    "Pillow>=10.0",
    "plyer>=2.1",
    "tomli-w>=1.0",
]

[project.scripts]
claude-usage-monitor = "claude_usage_monitor.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "pytest-mock>=3.14",
    "pyinstaller>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/claude_usage_monitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
