[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-usage-monitor"
version = "1.1.0"
description = "System-tray tool that monitors claude.ai usage limits via browser cookies"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pystray>=0.19.5",
    "Pillow>=12.2.0",
    "plyer>=2.1",
    "tomli-w>=1.2.0",
]

[project.scripts]
claude-usage-monitor = "claude_usage_monitor.__main__:main"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/claude_usage_monitor"]
